doc content on the document db functionality in general

--- a/documentation/splash.htm
+++ b/documentation/splash.htm
@@ -84,7 +84,9 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Document Database</h2>
-          <p>Describe the doc db stuff here.
+          <p>The Marten library provides .Net developers with the ability to easily use the proven <a href="http://www.postgresql.org">Postgresql database engine</a>
+and its <a href="https://www.compose.io/articles/is-postgresql-your-next-json-database/">fantastic JSON support</a> as a fully fledged <a href="https://en.wikipedia.org/wiki/Document-oriented_database">document database</a>. The Marten team believes that a document database has far reaching benefits for developer productivity
+over relational databases with or without an ORM tool. 
           </p>
           <p><a class="btn btn-default" href="<[linkto:documentation/documents;{href}]>" role="button">View details &raquo;</a></p>
         </div>
