made the default behavior in DocumentStore.For() be auto create

--- a/documentation/splash.htm
+++ b/documentation/splash.htm
@@ -66,6 +66,7 @@
             <h3>Postgresql as Document Db &amp; Event Store for .Net Development</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <a href="getting_started" class="btn btn-dark btn-lg">Get started!</a>
         </div>
     </header>
 
