doc update w/ better links?

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <title>Marten</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/marten/content/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
     <!-- Custom CSS -->
-    <link href="/content/stylish-portfolio.css" rel="stylesheet" type="text/css" />
+    <link href="/marten/content/stylish-portfolio.css" rel="stylesheet" type="text/css" />
 
 
     <!-- Custom Fonts -->
@@ -100,14 +100,14 @@
 and its <a href="https://www.compose.io/articles/is-postgresql-your-next-json-database/">fantastic JSON support</a> as a fully fledged <a href="https://en.wikipedia.org/wiki/Document-oriented_database">document database</a>. The Marten team believes that a document database has far reaching benefits for developer productivity
 over relational databases with or without an ORM tool. 
           </p>
-          <p><a class="btn btn-default" href="/documentation/documents" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="/marten/documentation/documents" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-2"></div>
         <div class="col-md-4">
           <h2>Event Store</h2>
           <p>Event Sourcing can be a powerful technique in applications that are workflow centric or have any need for historical queries. Marten utilizes the strong JSONB support to expose an ACID-compliant event store implementation over the Postgresql database. Even better yet, Marten
             takes advantage of Postgresql's embedded Javascript support to enable effective user-defined projections against your event streams.</p>
-          <p><a class="btn btn-default" href="/documentation/events" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="/marten/documentation/events" role="button">View details &raquo;</a></p>
        </div>
       </div>
 
