correcting the nuget name

--- a/getting_started/index.html
+++ b/getting_started/index.html
@@ -93,7 +93,7 @@
 <!--Url:getting_started-->
 <p>First, go get the Marten library from Nuget:</p>
 <pre>
-PM> Install-Package StructureMap
+PM> Install-Package Marten
 </pre>
 <p>Or, using paket:</p>
 <pre>
