Updated Storyteller, added "Edit on Github" link to docs

--- a/documentation/splash.htm
+++ b/documentation/splash.htm
@@ -55,6 +55,9 @@
             <li>
                 <a href="https://www.nuget.org/packages/Marten/" onclick = $("#menu-close").click(); >Nuget Downloads</a>
             </li>
+            <li>
+              <a href="https://github.com/jasperfx/marten/blob/master/documentation/<[FilePath]>"  class="fa fa-github"> Edit on GitHub</a>
+            </li>
 
         </ul>
     </nav>
