--- a/documentation/documents/index.html
+++ b/documentation/documents/index.html
@@ -69,7 +69,7 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.5.0</h3>
+		      	<h3>Marten 0.6.0</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
@@ -100,8 +100,9 @@ with Marten can be as simple as opening a <code>DocumentStore</code> to your new
             var store = DocumentStore
                 .For(&quot;host=localhost;database=marten_test;password=mypassword;username=someuser&quot;);
 </code></pre>
-<p>The code sample above sets up document storage against the Postgresql at the connection string you supplied. In the default configuration,
+<p>The code sample above sets up document storage against the Postgresql at the connection string you supplied. In this &quot;quickstart&quot; configuration,
 Marten will build new database tables and functions for each new document type as needed <strong>if those database schema objects do not already exist</strong>.</p>
+<div class="alert alert-info">As of Marten v0.6, document storage tables will also be dropped and rebuilt if the actual database table does not match up with the document storage configuration. So if you add a searchable field or change the id type of a document type, Marten will regenerate the database schema objects when running with AutoCreateSchemaObjects = true.</div>
 <p>While the default &quot;auto-create&quot; database schema objects is fantastic for a development time experience, you may not want Marten to be building out new database schema objects at production time. You might also want to override the default JSON serialization, tweak the document storage for performance, or opt into Postgresql 9.5's fancy new &quot;upsert&quot; capability. For customization, you have a different syntax for bootstrapping a <code>DocumentStore</code>:</p>
 <pre><code class="language-csharp">
             var store = DocumentStore.For(_ =&gt;
