--- a/documentation/documents/query_json/index.html
+++ b/documentation/documents/query_json/index.html
@@ -69,7 +69,7 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.5.0</h3>
+		      	<h3>Marten 0.6.0</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
@@ -91,7 +91,36 @@
 			      	<div id="main-pane">
 			      		<!--Title:Query for Raw JSON-->
 <!--Url:query_json-->
-<p>This is <a href="https://github.com/JasperFx/Marten/issues/16">also forthcoming work</a>. The point is to be able to fetch the raw JSON from the database for a document and immediately stream that data to a web client without having to take the performance hit of deserializing and serializing the object to and from JSON.</p>
+<div class="alert alert-info" role="alert">The Marten team will be adding more functionality in the future to retrieve the raw JSON strings for the results of projections and aggregations.</div>
+<p>Added in Marten v0.6 is the ability to retrieve just the raw JSON string for a document. The point is to be able to fetch the raw JSON from the database for a document and immediately stream that data to a web client without having to take the performance hit of deserializing and serializing the object to and from JSON.</p>
+<p>As of v0.6, Marten supplies the <code>IQuerySession/IDocumentSession.FindById&lt;T&gt;()</code> mechanism as shown below:</p>
+<pre><code class="language-csharp">
+        [Fact]
+        public void when_find_then_a_json_should_be_returned()
+        {
+            var issue = new Issue { Title = &quot;Issue 1&quot; };
+
+            theSession.Store(issue);
+            theSession.SaveChanges();
+
+            var json = theSession.FindJsonById&lt;Issue&gt;(issue.Id);
+            json.ShouldBe($&quot;{{\&quot;Id\&quot;: \&quot;{issue.Id}\&quot;, \&quot;Title\&quot;: \&quot;Issue 1\&quot;}}&quot;);
+        }
+</code></pre>
+<p>There is also an asynchronous version:</p>
+<pre><code class="language-csharp">
+        [Fact]
+        public async Task when_find_then_a_json_should_be_returned()
+        {
+            var issue = new Issue { Title = &quot;Issue 2&quot; };
+
+            theSession.Store(issue);
+            await theSession.SaveChangesAsync();
+
+            var json = await theSession.FindJsonByIdAsync&lt;Issue&gt;(issue.Id);
+            json.ShouldBe($&quot;{{\&quot;Id\&quot;: \&quot;{issue.Id}\&quot;, \&quot;Title\&quot;: \&quot;Issue 2\&quot;}}&quot;);
+        }
+</code></pre>
 
 
 			      	</div>
