--- a/getting_started/index.html
+++ b/getting_started/index.html
@@ -69,7 +69,7 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.5.0</h3>
+		      	<h3>Marten 0.6.0</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
@@ -91,6 +91,7 @@
 			      	<div id="main-pane">
 			      		<!--Title:Getting Started-->
 <!--Url:getting_started-->
+<div class="alert alert-info">As of v0.6, Marten only targets .Net 4.6. CoreCLR support <i>should</i> follow in the first quarter of 2016</div>
 <p>First, go get the Marten library from Nuget:</p>
 <pre>
 PM> Install-Package Marten
