--- a/documentation/documents/async/index.html
+++ b/documentation/documents/async/index.html
@@ -69,7 +69,7 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.5.0</h3>
+		      	<h3>Marten 0.6.0</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
@@ -91,7 +91,98 @@
 			      	<div id="main-pane">
 			      		<!--Title:Asynchronous Operations-->
 <!--Url:async-->
-<p>This work is forthcoming, but we're working under the assumption that every single read and write operation will have a corresponding asynchronous analogue. You can follow <a href="https://github.com/JasperFx/Marten/issues/16">the GitHub issue</a> to see if it's done yet;)</p>
+<p>Marten v0.6 added asynchronous alternatives for all querying and persisting methods on the <code>IQuerySession</code> and <code>IDocumentSession</code> interfaces.
+Marten follows the common .Net idiom of suffixing methods with &quot;Async&quot; to denote asynchronous methods.</p>
+<h2>Loading Documents by Id</h2>
+<p>To load a single document by id asynchronously:</p>
+<pre><code class="language-csharp">
+        [Fact]
+        public async Task persist_and_load_async()
+        {
+            var account = new Account { Id = &quot;email@server.com&quot; };
+
+            theSession.Store(account);
+            await theSession.SaveChangesAsync();
+
+            using (var session = theContainer.GetInstance&lt;IDocumentStore&gt;().OpenSession())
+            {
+                (await session.LoadAsync&lt;Account&gt;(&quot;email@server.com&quot;)).ShouldNotBeNull();
+
+                (await session.LoadAsync&lt;Account&gt;(&quot;nonexistent@server.com&quot;)).ShouldBeNull();
+            }
+        }
+</code></pre>
+<p>To load multiple documents by id asynchronously:</p>
+<pre><code class="language-csharp">
+            using (var session = store.OpenSession())
+            {
+                var users = await session.Load&lt;User&gt;().ByIdAsync(user2.Id, user3.Id, user4.Id);
+                users.Count().ShouldBe(3);
+            }
+</code></pre>
+<h2>Saving Changes</h2>
+<p>To persist all queued changes in a single unit of work asynchronously, use the <code>IDocumentSession.SaveChangesAsync()</code> method:</p>
+<pre><code class="language-csharp">
+            var user1 = new User { FirstName = &quot;Magic&quot;, LastName = &quot;Johnson&quot; };
+            var user2 = new User { FirstName = &quot;James&quot;, LastName = &quot;Worthy&quot; };
+            var user3 = new User { FirstName = &quot;Michael&quot;, LastName = &quot;Cooper&quot; };
+            var user4 = new User { FirstName = &quot;Mychal&quot;, LastName = &quot;Thompson&quot; };
+            var user5 = new User { FirstName = &quot;Kurt&quot;, LastName = &quot;Rambis&quot; };
+
+            theSession.Store(user1);
+            theSession.Store(user2);
+            theSession.Store(user3);
+            theSession.Store(user4);
+            theSession.Store(user5);
+
+            await theSession.SaveChangesAsync();
+</code></pre>
+<h2>Querying by SQL</h2>
+<p>To query for results with user-supplied SQL, use:</p>
+<pre><code class="language-csharp">
+                using (var session = store.OpenSession())
+                {
+                    var u = new User { FirstName = &quot;Jeremy&quot;, LastName = &quot;Miller&quot; };
+                    session.Store(u);
+                    session.SaveChanges();
+
+                    var users = await session.QueryAsync&lt;User&gt;(&quot;select data from mt_doc_user where data -&gt;&gt; &#39;FirstName&#39; = &#39;Jeremy&#39;&quot;);
+                    var user = users.Single();
+
+                    user.LastName.ShouldBe(&quot;Miller&quot;);
+                    user.Id.ShouldBe(u.Id);
+                }
+</code></pre>
+<h2>Linq Operators</h2>
+<p>Marten adds extension methods to <code>IQueryable</code> for the asynchronous invocation of the common Linq operators:</p>
+<ul>
+<li><code>AnyAsync()</code></li>
+<li><code>CountAsync()</code></li>
+<li><code>LongCountAsync()</code></li>
+<li><code>FirstAsync()/FirstOrDefaultAsync()</code></li>
+<li><code>SingleAsync()/SingleOrDefaultAsync()</code></li>
+<li><code>ToListAsync()</code></li>
+</ul>
+<p>An example usage of <code>ToListAsync()</code> is shown below:</p>
+<pre><code class="language-csharp">
+        [Fact]
+        public async Task use_to_list_async_in_query()
+        {
+            theSession.Store(new User { FirstName = &quot;Hank&quot; });
+            theSession.Store(new User { FirstName = &quot;Bill&quot; });
+            theSession.Store(new User { FirstName = &quot;Sam&quot; });
+            theSession.Store(new User { FirstName = &quot;Tom&quot; });
+
+            await theSession.SaveChangesAsync();
+
+            var users = await theSession
+                .Query&lt;User&gt;()
+                .Where(x =&gt; x.FirstName == &quot;Sam&quot;)
+                .ToListAsync();
+
+            users.Single().FirstName.ShouldBe(&quot;Sam&quot;);
+        }
+</code></pre>
 
 
 			      	</div>
